changed automation master to main

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -2,12 +2,12 @@ name: Build and release
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     tags:
       - '*'
 
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
   workflow_dispatch:
 
